RESOLVED FIXED 29186
template specialisation error on WINSCW
https://bugs.webkit.org/show_bug.cgi?id=29186
Summary template specialisation error on WINSCW
Janne Koskinen
Reported 2009-09-11 08:53:13 PDT
Compiling literalparser.cpp for WINSCW complains about "undefined identifier mode". "mode" has been defined in the template specialisation, but the prototype of the function has a diffrent variable name for it "parserMode". This is addenum for https://bugs.webkit.org/show_bug.cgi?id=28069. Even after the inlining Literalparser.cpp fails to compile with mwccsym Version 3.2.5 build 482 (Build 482). There is two ways of fixing the compiler issue. Either remove the parserMode from prototype or make the prototype to have the same name for argument as the implementation. I chose the latter as it makes it more clear that we are dealing here with template specialisation.
Attachments
literalparser.h patch (1.11 KB, patch)
2009-09-11 08:59 PDT, Janne Koskinen
hausmann: review+
Janne Koskinen
Comment 1 2009-09-11 08:59:57 PDT
Created attachment 39438 [details] literalparser.h patch
Eric Seidel (no email)
Comment 2 2009-09-14 10:10:57 PDT
I continue to be entertained by this compiler. :) I think "parserMode" is clearer than "mode" and would have changed them both to "parserMode", but this is also OK.
Simon Hausmann
Comment 3 2009-09-17 03:35:45 PDT
Comment on attachment 39438 [details] literalparser.h patch Please don't mark the patch as r+ but use r? instead to ask for a review :)
Simon Hausmann
Comment 4 2009-09-17 03:45:53 PDT
Comment on attachment 39438 [details] literalparser.h patch There we go, r=me. This is a really simple fix :)
Simon Hausmann
Comment 5 2009-09-17 03:47:25 PDT
Landed in r48462
Note You need to log in before you can comment on or make changes to this bug.