Symbian/WINSCW build fix.

Patch by Janne Koskinen <janne.p.koskinen@digia.com> on 2009-09-17
Reviewed by Simon Hausmann.

https://bugs.webkit.org/show_bug.cgi?id=29186

WINSCW Template specialisation name in declaration must the be the same as in implementation.

* runtime/LiteralParser.h:

Canonical link: https://commits.webkit.org/40027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48462 268f45cc-cd09-0410-ab3c-d52691b4dbfc